--- a/Assignment03/TextProcessor/pom.xml
+++ b/Assignment03/TextProcessor/pom.xml
@@ -65,6 +65,13 @@
             <version>2.7.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-dynamodb -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>1.12.11</version>
+        </dependency>
+
     </dependencies>
 
     <build>
